# swr_power_meter

./: README.md  tuto github desktop.docx
doc/: Bug_et_suivi_de_version.ods  CARACTERISTIQUE_FR4.xlsx  COMPARATIF TOSMETRE.xlsx  COMPARATIF_TOSMETRE.xlsx  SWR_POWER_METER_F8KGL_Principe_de_calibration_v0.6.odt  SWR_POWER_METER_F8KGL_Principe_de_calibration_v0.7.odt  SWR_POWER_METER_F8KGL_description_specification_v0.2.odt  SWR_POWER_METER_F8KGL_description_specification_v0.4.odt  SWR_POWER_METER_F8KGL_description_specification_v0.5.odt  SWR_POWER_METER_F8KGL_description_specification_v0.6.docx  SWR_POWER_METER_F8KGL_description_specification_v0.6.odt  SWR_POWER_METER_F8KGL_description_specification_v1.0.odt  SWR_POWER_METER_F8KGL_etude_detecteur_HF_v0.6.odt  SWR_POWER_METER_F8KGL_etude_detecteur_HF_v0.7.odt  SWR_POWER_METER_F8KGL_fonctionnement_specifications_implementation_v0.6.odt  SWR_POWER_METER_F8KGL_implementation_v0.6.odt  SWR_POWER_METER_F8KGL_implementation_v0.7.odt  SWR_POWER_METER_F8KGL_specifications.txt  SWR_POWER_METER_F8KGL_specifications.xhtml  SWR_POWER_METER_F8KGL_specifications_V0.7.epub  SWR_POWER_METER_F8KGL_specifications_V0.7.fodt  SWR_POWER_METER_F8KGL_specifications_V0.7.xml  SWR_POWER_METER_F8KGL_specifications_v0.6.odt  SWR_POWER_METER_F8KGL_specifications_v0.7.odt  courbe_Vdetect.ods  detecteur_HF.ods  spec_logicielle.docx  spec_logicielle.odt  spec_logicielle_0.1.docx  spec_logicielle_0.2.docx  ~$ec_logicielle.docx
prj/: 18f1320_g.lkr  Makefile  cal.asm  main.TEST.lst  main.asm  main.inc  swr_power_meter.CALIBRATION.stc  swr_power_meter.stc  xwatt_meter.CALIBRATION.stc
src/doc/: .~lock.SWR_POWER_METER_F8KGL_specifications.fodt#  ICD2Troubleshooting.doc  SWR_POWER_METER_F8KGL_Tests.fodt  SWR_POWER_METER_F8KGL_etude.fodt  SWR_POWER_METER_F8KGL_etude_detecteur_HF.fodt  SWR_POWER_METER_F8KGL_etude_detecteur_HF.odt  SWR_POWER_METER_F8KGL_implementation.fodt  SWR_POWER_METER_F8KGL_principes_de_calibration.fodt  SWR_POWER_METER_F8KGL_specifications.fodt  SWR_POWER_METER_Tests.fodt  brouillon_spec_V1.0.fodt  cahier_test.txt  detecteur_HF.ods  tuto github desktop.docx
src/hw/: 16F88.bak  16F88.bck  16F88.dcm  16F88.lib  TOSMETRE SANS LCD.net  TOSMETRE-cache.bak  TOSMETRE-cache.dcm  TOSMETRE-cache.lib  TOSMETRE-rescue.lib  TOSMETRE.bak  TOSMETRE.dsn  TOSMETRE.erc  TOSMETRE.kicad_pcb  TOSMETRE.kicad_pcb-bak  TOSMETRE.kicad_prl  TOSMETRE.kicad_pro  TOSMETRE.kicad_sch  TOSMETRE.net  TOSMETRE.pro  TOSMETRE.sch  TOSMETRE.sch-bak  TOSMETRE.xml  TOSMETRE2.net  TOSMETRE3.net  TOSMETRE4.net  TOSMETTRE 16F88.net  fp-info-cache  swr_power_meter.bck  swr_power_meter.dcm  swr_power_meter.lib  sym-lib-table
src/hw/Ligne imprime/: Ligne imprime.net  Ligne imprime.pro  fp-info-cache  (+1 more)
src/hw/sim/gpsim/lib/: Makefile.am  ad5175.cc  ad5175.h  detector.cc  detector.h  i2c2par.cc  lt1818.cc  lt1818.h  ltc2305.cc  ltc2305.h  module_attribute.h  resistor.cc  swrpowermeterf8kgl_modules.cc
trunk/doc/: SWR_POWER_METER_F8KGL_description_specification_v0.3.odt  SWR_POWER_METER_F8KGL_description_specification_v0.5.odt  courbe_Vdetect.ods
trunk/prj/: cal.asm  main.asm
(+145 files in other folders)
